--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-        run: |
-          docker-compose build
+      - name: Build Docker image
+        run: docker-compose build
       
       - name: Deploy to EC2
         env:
