--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,22 @@ version: '3.8'
 # define os containers utilizados
 services:
   we_movies:
-    build:
-      context: .
-      dockerfile: Dockerfile
     image: we_movies_image:latest
+    build:
+      context: ./
+      dockerfile: Dockerfile
     container_name: we_movies
     networks:
       - compose_network
+    volumes:
+        - .:/app
+        - /app/node_modules
+        - /app/.next
     ports:
       - "3000:3000"
-    volumes:
-      - .:/app
     environment:
-      PORT_BUILD: 3000
+      PORT: 3000
+      NEXT_PUBLIC_BASE_URL: ${NEXT_PUBLIC_BASE_URL}
 
 # define as redes para comunicação entre os containers
 networks:
